# open-agent

./: Containerfile  Dockerfile  README.md  compose.yaml  llama-swap.yaml
.continue/: config.yaml
.continue/rules/: TOOLS.md
OpenCode/: Containerfile  opencode.jsonc
llama-swap/: Containerfile  llama-swap.yaml
rag-mcp-server/: README.md  pyproject.toml  rag_mcp_server.py
