[tool.poetry]
name = "rag-mcp-server"
version = "0.1.0"
description = "RAG MCP Server for Continue.dev with LanceDB"
authors = ["Damiano Clementel <damiano.clementel@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mcp = ">=1.0.0"
lancedb = ">=0.6.0"
langchain = "^1.2.15"
langchain-community = "^0.4.1"
langchain-text-splitters = ">=0.0.1"
sentence-transformers = ">=2.2.0"
pyyaml = ">=6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
